2.1.9
- fixed: packaging issues
- fixed: minor issues found by static analysis
- added: support for season/episode/part numbers for EPG tags

2.1.8
- added: support for epg subtitles, aka episode names
- added: support for creating repeating timers, aka time schedules
- fixed: conditions for addon restart after settings changes
- internal: fixed build system regressions introduced with move to cmake
- internal: updated to use libplatform

2.1.7
- added: support for radio channel groups
- added: support for star and parental rating (read only)

2.1.6
- updated to PVR API v1.9.6
- added: support for channel group sort index
- fixed: crash while adding/updating timers on the client (double free of a htsp message)

2.1.5
- improved HTSP specification compliance

2.1.4
- updated to PVR API v1.9.5
- added: avahi discovery
- fixed: lock on exit
- fixed: race when seeking within recordings
- fixed: CHTSPVFS::Read() needs the mutex locked
- removed guilib dep

2.1.1
- updated to PVR API v1.9.4
- updated to GUI API v5.8.0
- updated to Codec API v1.0.1

2.0.5
- fixed incorrect timeout value when deleting recordings (thanks @ksooo)

2.0.4
- added a missing commit that somehow got lost when making v2.0.3

2.0.3
- rebrand of HTSP client identifier
- improve the VFS slightly by doing reading and buffering on separate threads, as well as tweaking the read length

2.0.2
- language files from Transifex
- minor changes to conform with C++11

2.0.0
- replaced by the newer pvr.tvh implementation

1.9.40
- added getBackendHostname function

1.9.38
- change library name to Kodi

1.9.37
- backport ATSC subchannel number support from pvr.tvh

1.9.36
- fixed deadlock when activating the addon on some darwin (osx, ios) runtimes

1.9.35
- improve sync after connection restore (@ksooo)
- added support for getting and setting startExtra, stopExtra, retention, priority properties of recordings and timers (@ksooo)
- backported GetPlayingTime from pvr.tvh (@ksooo)

1.9.31
- updated to API v1.9.2
